UDS-949: Fix Image block on mobile

--- a/src/components/image/_images.scss
+++ b/src/components/image/_images.scss
@@ -28,3 +28,7 @@
     }
   }
 }
+
+figure.align-center {
+  width: 100%; //(Used to be max-content)
+}
